# jact

./: .gitignore  AGENT.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  alternative_solver.py  cashflow_callbacks.py  function_builders.py  function_utils.py  package-lock.json  probability_callbacks.py  prototype_1.py  prototype_1_heun.py  prototype_2.py  prototype_3.py  prototype_4.py  prototype_5.py  prototype_6.py  prototype_7.py  prototype_9.py  pt2_debug.ipynb  pyproject.toml  semimarkov_solver.py  test.ipynb  test2.ipynb
.github/workflows/: publish.yml
archive/original_prototype/: function_utils.py
benchmarks/: benchmark_solver_kernel.py
docs/: api_spec.md  api_spec_short.md  autodiff_notebook.ipynb  convergence_notebook.ipynb  example_notebook.ipynb  fitted_nn_notebook.ipynb  index.md  introduction.md
docs/design/: cashflow.md  cashflow_valuation.md  continuity_design.md  initial_distribution.md  solver.md  valuation_and_accumulation.md
docs/implementation/: initial_distribution.md  point_mass.md
docs/original_prototype/: probability_callbacks.py  prototype_8.py
docs/reflections/: float32_cashflow_precision.md
docs/review/: README.md  jact_callbacks_review.md  jact_cashflows_review.md  jact_init_review.md  jact_initial_distribution_review.md  jact_model_review.md  jact_state_space_review.md  solver_review.md  tests_test_cashflows_review.md  tests_test_initial_distribution_integration_review.md  tests_test_initial_distribution_jit_review.md  tests_test_model_review.md  tests_test_solver_review.md  tests_test_state_space_review.md
docs/superpowers/plans/: 2026-05-10-package-cleanup.md
docs/superpowers/specs/: 2026-05-10-package-cleanup-design.md
jact/: __init__.py  callbacks.py  cashflows.py  initial_distribution.py  model.py  solver.py  state_space.py
jact/intensity/: __init__.py
notes/: convergence_notebook.ipynb
notes/design/: cashflow.md  cashflow_aggregation.md  cashflow_api.md  continuity_design.md  initial_distribution.md  model_object_wrappers.md  solver.md
notes/implementation/: initial_distribution.md  interval_cashflow_update_scheme.md  point_mass.md
notes/reflections/: float32_cashflow_precision.md  initial_distribution_teaching.md  package_api_review.md
notes/review/: README.md  tests_init_review.md  tests_test_cashflows_review.md  tests_test_model_review.md  tests_test_solver_review.md
scripts/: cashflow_precision_diagnose.py  cashflow_precision_step.py
src/jact/: __init__.py  callbacks.py  cashflows.py  initial_distribution.py  model.py  probability.py  result.py  solver.py  state_space.py  wrappers.py
src/jact/agents/: __init__.py  __main__.py  installer.py
src/jact/agents/jact/: SKILL.md
tests/: conftest.py  test_agents.py  test_cashflows.py  test_initial_distribution_integration.py  test_initial_distribution_jit.py  test_model.py  test_solver.py  test_state_space.py  test_wrappers.py
tools/: cashflow_precision_diagnose.py  cashflow_precision_sweep.py  density_precision_sweep.py
